# pcoplayer

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
src/: App.css  App.tsx  AppContainer.tsx  main.tsx
src-tauri/: Cargo.toml  info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bbs.rs  core.rs  lib.rs  main.rs
src-tauri/src/bbs/: compatible.rs  shitaraba.rs
src-tauri/src/core/: commands.rs  platform.rs  resolve_url.rs  state.rs  window.rs
src-tauri/src/core/platform/: macos.rs  windows.rs
src-tauri/src/core/window/: resizer.rs
src-tauri/src/core/window/resizer/: macos.rs  windows.rs
src-tauri/src/core/window/resizer/macos/: window_delegate.rs  window_delegate_impl.rs
src/components/: Comment.tsx  Info.tsx
