[package]
name = "pcoplayer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pcoplayer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
clap = { version = "4.5.19", features = ["derive"] }
encoding_rs = "0.8.34"
futures = "0.3.30"
log = "0.4.22"
m3u = "1.0.0"
percent-encoding = "2.3.1"
regex = "1.11.0"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tauri = { version = "2.0.2", features = [] }
tauri-plugin-log = "2.0.1"
tauri-plugin-shell = "2.0.1"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = [
    "NSEvent",
    "NSPasteboard",
    "NSScreen",
] }
objc2-foundation = "0.2.2"
